--- a/.github/workflows/compile_ps3.yml
+++ b/.github/workflows/compile_ps3.yml
@@ -34,6 +34,6 @@ jobs:
     #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
     - name: Release
-      run: gh release create v${{ github.RUN_NUMBER }} HE.KT.Umineko.Tsubasa.PT-BR.(PS3).7z
+      run: gh release create v${{ github.RUN_NUMBER }} "HE.KT.Umineko.Tsubasa.PT-BR.(PS3).7z"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
