--- a/.github/workflows/compile_pc.yml
+++ b/.github/workflows/compile_pc.yml
@@ -1,4 +1,4 @@
-name: Compile and release
+name: Compile and release (PC)
 
 # Tradução: quando houver uma atualização (push) ou pedido de atualização (pull request) nos arquivos hane_pc.txt, este script poderá ser rodado, mas APENAS se houver a adição de uma tag
 on:
@@ -25,9 +25,6 @@ jobs:
     - name: Compile patch (PC)
       run: python dependencies\compile_pc.py
 
-    - name: Compile patch (PS3)
-      run: python dependencies\compile_ps3.py
-
     #- name: Release
     #  uses: softprops/action-gh-release@v1
     #  if: startsWith(github.ref, 'refs/tags/')
@@ -41,6 +38,6 @@ jobs:
       uses: "WyriHaximus/github-action-get-previous-tag@v1"
       
     - name: Release
-      run: gh release upload ${{ steps.previoustag.outputs.tag }} "HE.KT.Umineko.Tsubasa.PT-BR.(Legacy.Art).7z" "HE.KT.Umineko.Tsubasa.PT-BR.(PS3).7z"
+      run: gh release upload ${{ steps.previoustag.outputs.tag }} "HE.KT.Umineko.Tsubasa.PT-BR.(Legacy.Art).7z"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
